added JWT, made improvements to code, fixed logging, and added better testing
